# MEDCoupling_tutos

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
presentations/src/: 1_medcoupling.md  2_medfile_io.md  resume.tex  resume_francais.md
src/medcoupling_tutos/: __init__.py  to_pyvista.py
tutorials/ExempleBonus/Multiprocessing/: Multiprocessing.ipynb
tutorials/ExempleComplet/Agitateur/: Agitateur.ipynb  Agitateur_exercise.ipynb
tutorials/ExempleComplet/RJH/: RJH.ipynb  RJH_exercise.ipynb
tutorials/ExempleThematique/0_UMesh/: UMesh.ipynb
tutorials/ExempleThematique/1_DataArray/: DataArray.ipynb
tutorials/ExempleThematique/2_Field/: Field.ipynb
tutorials/ExempleThematique/3_LecEcrBase/: LecEcrBase.ipynb
tutorials/ExempleThematique/4_LecEcrAvancee/: LecEcrAvancee.ipynb
tutorials/ExempleThematique/5_SplitMergeAvancee/: SplitMergeAvancee.ipynb
tutorials/ExempleThematique/6_Remapper/: Remapper.ipynb
tutorials/to-python/ExempleBonus/Multiprocessing/: Multiprocessing.py
tutorials/to-python/ExempleBonus/NumpyScipy/: NumpyScipy.py
tutorials/to-python/ExempleComplet/Agitateur/: Agitateur.py
tutorials/to-python/ExempleComplet/RJH/: RJH.py
tutorials/to-python/ExempleThematique/0_UMesh/: UMesh.py
tutorials/to-python/ExempleThematique/1_DataArray/: DataArray.py
tutorials/to-python/ExempleThematique/2_Field/: Field.py
tutorials/to-python/ExempleThematique/3_LecEcrBase/: LecEcrBase.py
tutorials/to-python/ExempleThematique/4_LecEcrAvancee/: LecEcrAvancee.py
(+2 files in other folders)
