[project]
name = "medcoupling-tutos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.5",
    "medcoupling>=9.15.0",
    "numpy<2",
    "pyvista[jupyter]>=0.47.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.1",
    "nbval>=0.11.0",
    "pytest>=8.3.5",
]
