[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "medcoupling_tutos"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyterlab>=4.3.5",
  "medcoupling>=9.15.0",
  "numpy<2",
  "pyvista[jupyter]>=0.47.1",
  "scipy>=1.15.2",
]

[dependency-groups]
dev = ["nbstripout>=0.8.1", "nbval>=0.11.0", "pytest>=8.3.5"]
